--- a/index.html
+++ b/index.html
@@ -1,42 +1,76 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scanner QR Code / Code-barres</title>
-    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scanner QR Code / Code-barres</title>
+  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+    }
+    #reader {
+      width: 300px;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Scanner QR Code / Code-barres</h1>
-    <div id="reader" style="width: 300px;"></div>
-    <p id="result"></p>
+  <h1>Scanner QR Code / Code-barres</h1>
+  <div id="reader"></div>
+  <p id="status"></p>
 
-    <script>
-        // Initialiser le lecteur de QR Code
-        function onScanSuccess(decodedText) {
-            // Afficher le résultat
-            document.getElementById("result").innerHTML = `Code détecté : ${decodedText}`;
+  <script>
+    // URL de votre Google Apps Script pour recevoir les données
+    const googleScriptURL = "https://script.google.com/macros/s/AKfycbxTVggQpTdWxF_lsoCwjhW2UZPyngN2JakJHQLDUL2XYUxnREzUONPTAMKFxlTqniTnGQ/exec";
 
-            // Envoyer les données à Google Sheets via l'API Google Apps Script
-            fetch('https://script.google.com/macros/s/AKfycbwwDl9yvu8jHu96AvQdwSQKePUGF9IkE9X3mAJA1-YpOxNq8sdDSDHEuwFYaFhHSuomDQ/exec', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ data: decodedText })
-            })
-            .then(response => response.json())
-            .then(data => console.log('Données envoyées à Google Sheets:', data))
-            .catch(error => console.error('Erreur:', error));
-        }
+    function onScanSuccess(decodedText, decodedResult) {
+      // Affiche le texte décodé pour vérification
+      document.getElementById("status").innerText = `Scanné avec succès : ${decodedText}`;
 
-        function onScanFailure(error) {
-            console.warn(`Erreur de scan: ${error}`);
-        }
+      // Nettoie les données en supprimant les lignes vides
+      const cleanedData = decodedText.trim().replace(/\n\s*\n/g, '\n');
 
-        let html5QrcodeScanner = new Html5QrcodeScanner(
-            "reader", { fps: 10, qrbox: 250 });
-        html5QrcodeScanner.render(onScanSuccess, onScanFailure);
-    </script>
+      // Divise les données par lignes en supposant que chaque ligne représente un champ
+      const [nom, prenom, societe, fonction, telephone] = cleanedData.split("\n");
+
+      // Prépare les données pour l'envoi
+      const row = [nom, prenom, societe, fonction, telephone];
+
+      // Envoie les données au Google Sheet via Google Apps Script
+      fetch(googleScriptURL, {
+          method: "POST",
+          mode: "no-cors",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(row),
+      })
+      .then(() => {
+          document.getElementById("status").innerText = "Données envoyées avec succès à Google Sheets!";
+      })
+      .catch((error) => {
+          console.error("Erreur lors de l'envoi des données :", error);
+          document.getElementById("status").innerText = "Erreur lors de l'envoi des données.";
+      });
+    }
+
+    function onScanFailure(error) {
+      // Gestion de l'erreur de scan (facultatif)
+      console.warn(`Erreur de scan : ${error}`);
+    }
+
+    // Initialise le scanner HTML5 QR Code
+    let html5QrcodeScanner = new Html5QrcodeScanner(
+      "reader", 
+      { fps: 10, qrbox: 250 },
+      /* verbose= */ false
+    );
+    html5QrcodeScanner.render(onScanSuccess, onScanFailure);
+  </script>
 </body>
 </html>
