--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       width: 300px;
       height: 300px;
       margin: 20px auto;
-      display: none; /* Masquer jusqu'à ce qu'on démarre */
+      display: none;
     }
     #status {
       margin-top: 10px;
@@ -56,8 +56,15 @@
     }
 
     function startScanner() {
-      document.getElementById("reader").style.display = "block"; // Afficher le lecteur
       document.getElementById("status").innerText = "Activation du scanner...";
+      
+      // Vérification si le navigateur supporte la caméra
+      if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+        document.getElementById("status").innerText = "Votre navigateur ne supporte pas l'accès à la caméra.";
+        return;
+      }
+
+      document.getElementById("reader").style.display = "block"; // Afficher le lecteur
 
       const html5QrcodeScanner = new Html5Qrcode("reader");
       html5QrcodeScanner.start(
@@ -72,7 +79,7 @@
         document.getElementById("status").innerText = "Scanner prêt. Pointez vers un QR code.";
       }).catch(err => {
         console.error("Erreur de démarrage du scanner :", err);
-        document.getElementById("status").innerText = "Impossible d'accéder à la caméra. Vérifiez les permissions.";
+        document.getElementById("status").innerText = "Erreur : Impossible d'accéder à la caméra. Vérifiez les permissions.";
       });
     }
   </script>
